--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           </div>
         </div>
         <div class="text-small">
-          <div class="mb-1">&copy; Right Resume. All rights reserved.</div>
+          <div class="mb-1">&copy; Right  All rights reserved.</div>
           <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
         </div>
       </div>
