--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="pb-1 text-secondary">Joyce@company.com</div>
           </div>
           <div class="col-sm-4">
-            <div class="pb-1">Phone</div>
+            <div class="pb-1">imran liaqt</div>
           </div>
           <div class="col-sm-8">
             <div class="pb-1 text-secondary">+0718-111-0011</div>
